# linggo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.py  howtobuild.md  ppt.md  runpy.c
bin-linux-x86_64/: linggo-linux-x86_64
include/linggo/: ai.h  email.h  error.h  server.h  user.h  utils.h  voc.h
res/: api.py
res/config/: config.json
res/html/: index.html  search.html
res/html/fragment/: about.html  appbar.html  serverinfo.html
res/js/: linggo.js
res/public/: googlefont.css  index.html  linggo.css  linggo.js  search.html
res/public/fragments/: about.html  appbar.html  marked.html  memorize.html  quiz.html
res/records/: meta.json
src/: ai.c  api.py  error.c  main.c  runpy.c  server.c  user.c  utils.c  voc.c
tasks/: ai.md
thr/json-builder/: json-builder.h
